Alterações de injeção de dependência
